<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="google_maps_key">AIzaSyD8z2lWzm896P2g8VhaBfrVam0JL1BaiW0</string>
    <string name="more_sale">More Sales</string>
    <string name="base_img_url">http://grzexpress.com/ar/./../product_images/</string>

    <string name="app_name">Grz</string>
    <string name="action_settings">Settings</string>
    <string name="addcomment">you must add rate!!</string>
    <string name="adddetailsaddress">Add Address details</string>
    <string name="addratesuccess">rate add successfully</string>
    <string name="addressdetails">address details</string>
    <string name="addtocart">Add To Cart</string>
    <string name="addtocart2">Add To Cart</string>
    <string name="addtocartsuccess">Add to Cart successfully</string>
    <string name="aleady_exists">Already exists in cart</string>
    <string name="cannot_fetch_address">"enable to find address "</string>
    <string name="cart">Your Cart</string>
    <string name="cash">cash</string>
    <string name="charge_ready">ready to charge</string>
    <string name="charge_rules">charge rules</string>
    <string name="choice_depart">Choice Department</string>
    <string name="choice_location">Choice delivery place</string>
    <string name="choice_payment_way">Choice Payment Way</string>
    <string name="choice_size">Choice Size</string>
    <string name="client">Client</string>
    <string name="coin">R.OM</string>
    <string name="day_offers">Day offers</string>
    <string name="dayoffer">Day offers</string>
    <string name="degree_rate">Rate Ratio</string>
    <string name="deletefromfavsucces">delete from favorite</string>
    <string name="deliveried">Delivered</string>
    <string name="pending">Pending </string>
    <string name="cancelled">Cancelled</string>
    <string name="processing">Processing</string>
    <string name="readyforship">Ready for shipment</string>
    <string name="awaiting">Awaiting Courier Pickup</string>
    <string name="diffs_product">Different Products</string>
    <string name="error_in_data">"error in data "</string>
    <string name="error_tryagani">error,try again</string>
    <string name="famous_product">famous products</string>
    <string name="favnotfound">no favorite products found</string>
    <string name="favorites_products">Favorites Products</string>
    <string name="finish_order">Finish Order</string>
    <string name="free_charge">Free Charge</string>
    <string name="from">From</string>
    <string name="gotoorders">Go to Orders</string>
    <string name="login">Login</string>
    <string name="loginfirst">You Must Login First</string>
    <string name="loout">"Logout "</string>
    <string name="main">MainPage</string>
    <string name="more">more</string>
    <string name="my_order">My Orders</string>
    <string name="myorders">My Orders</string>
    <string name="newuser">Register New User</string>
    <string name="noaddress">No Address Found</string>
    <string name="noitemsincart">No Products in Your Cart</string>
    <string name="norates">No Rates Found</string>
    <string name="nosearchname">Add Product Name</string>
    <string name="notfound">"No Found "</string>
    <string name="nothaveaccount">You have not acount? Register Now</string>
    <string name="notifications">Notification</string>
    <string name="num">Plot</string>
    <string name="offers">Offers</string>
    <string name="order_date">Order Date</string>
    <string name="order_details">Order Details</string>
    <string name="order_num">Order Date :</string>
    <string name="password">Password</string>
    <string name="payment_way">"Payment : "</string>
    <string name="payoptions">Payment Options</string>
    <string name="paypal">Payapal</string>
    <string name="phone">Phone</string>
    <string name="product_des">Description</string>
    <string name="product_details">Product Details</string>
    <string name="product_num">"Products : "</string>
    <string name="product_rates">Products Rate</string>
    <string name="products_orders">"Products of Order : "</string>
    <string name="productsof">Products</string>
    <string name="rate">"rate "</string>
    <string name="rate_now">Rate Now</string>
    <string name="rate_product">Rate Product</string>
    <string name="rates">Rates</string>
    <string name="realcoin">rial</string>
    <string name="remendier">available</string>
    <string name="repassword">Re-Password</string>
    <string name="requestnotallow">You Can not request more than available quentity</string>
    <string name="search">search about delivery place</string>
    <string name="searchabout">search by products</string>
    <string name="send">confirm</string>
    <string name="sendrate">send</string>
    <string name="sure_order">confirm order</string>
    <string name="title">Login</string>
    <string name="total">Tatal :</string>
    <string name="under_delivery">deliveried</string>
    <string name="user_rates">User rates</string>
    <string name="username">user name</string>
    <string name="wait">Waiting...</string>
    <string name="write_comment">"write a coment "</string>
    <string name="writecomment">write tou comment</string>
    <string name="cuurency">cuurency</string>

    <string-array name="filters">
        <item>More Rate</item>
        <item>Less Price</item>
        <item>More Price</item>
    </string-array>
    <string name="complete">"complete your data "</string>
    <string name="passworsnotmatch">passwords not equel</string>
    <string name="register">register</string>
    <string name="registersuccess">register successfully</string>
    <string name="hello">"Hello "</string>
    <string name="disscount">sale</string>
    <string name="favorite">Favorite</string>
    <string name="orderfound">No Orders Found for you</string>
    <string name="youlogout">You Are Logout</string>
    <string name="product_name">Product name</string>


    <string name="popular_products">Popular products</string>
    <string name="error">Error</string>
    <string name="frame_load_failed">Failed to load, Please try again later or contact us if this error continue</string>
    <string name="tab_to_retry">Tab to try again</string>
    <string name="press_back">Press Back again to Exit</string>
    <string name="close">Close</string>
    <string name="glasses">Glasses</string>
    <string name="homegard"><![CDATA[Home & Gardens]]></string>
    <string name="electronics">Electronics</string>
    <string name="mobiles">Mobiles</string>
    <string name="cloth">Cloth</string>
    <string name="currency">pound</string>

    <string name="erroroccure"> Error Occure</string>
    <string name="product_sizes">Product sizes</string>
    <string name="product_colors">Product colores</string>
    <string name="sale_now">sale now</string>
    <string name="contact">Contact us</string>
    <string name="chat">Chating</string>
    <string name="chatlist">"Chat list "</string>
    <string name="deliveryaddress">choice delivery place</string>
    <string name="filter" translatable="false">filter</string>
    <string name="byprice">by price</string>
    <string name="byspilling">by name</string>
    <string name="deliverd">deliver</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="noaddressfound">No address found</string>
    <string name="selectcurrency">Select One Name:-</string>
    <string name="yourselect">your select :-</string>
    <string name="empty">Add message</string>
    <string name="newaddress">Add new address</string>
    <string name="confirm">Add</string>
    <string name="addlocation">choice Street address, post office, apartment, suite, unit</string>
    <string name="choicecountry">  choice your country </string>
    <string name="choicecity">choice your city/state/region</string>
    <string name="choicename">choice your name</string>
    <string name="choicephone">choice your phone</string>
    <string name="notes">Zip code, zip</string>
    <string name="now">now</string>
    <string name="chargeaddress">Charge Addresses</string>
    <string name="usernameerror">username or password un correct</string>
    <string name="product_notes">notes</string>
    <string name="related_products">related products</string>
    <string name="choicelang">choice langauge</string>
    <string name="lang">Langauge</string>
    <string name="sendreq">اريد الاستفسار عن بعض المنتجات (يجب عليك تسجيل رقم الشركة اولا)</string>
    <string name="dirctcontact"> Direct Contact </string>
    <string name="save">save</string>
    <string name="requested">requested quntity </string>
    <string name="editaddress"> edit address </string>
    <string name="day">day</string>
    <string name="remendierdays"> remendier  </string>

</resources>
