<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".presentationn.screens.feature.login.LoginFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/newaddress"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/linear_background_for_writecomment"
                android:gravity="center_vertical|start"
                android:hint="@string/addlocation"
                android:paddingStart="40dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8" />

            <View
                android:id="@+id/view1"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="15dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/location"
                app:layout_constraintStart_toStartOf="@id/location"
                app:layout_constraintTop_toTopOf="@id/location" />



            <EditText
                android:id="@+id/country"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/linear_background_for_writecomment"
                android:gravity="center_vertical|start"
                android:hint="@string/choicecountry"
                android:paddingStart="40dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location"
                app:layout_constraintWidth_percent="0.8" />

            <View
                android:id="@+id/view2"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="15dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/country"
                app:layout_constraintStart_toStartOf="@id/country"
                app:layout_constraintTop_toTopOf="@id/country" />



            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/linear_background_for_writecomment"
                android:gravity="center_vertical|start"
                android:hint="@string/choicecity"
                android:paddingStart="40dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country"
                app:layout_constraintWidth_percent="0.8" />

            <View
                android:id="@+id/view3"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="15dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/city"
                app:layout_constraintStart_toStartOf="@id/city"
                app:layout_constraintTop_toTopOf="@id/city" />



            <EditText
                android:id="@+id/notes"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/linear_background_for_writecomment"
                android:gravity="center_vertical|start"
                android:hint="@string/notes"
                android:paddingStart="40dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city"
                app:layout_constraintWidth_percent="0.8" />

            <View
                android:id="@+id/view4"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="15dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/notes"
                app:layout_constraintStart_toStartOf="@id/notes"
                app:layout_constraintTop_toTopOf="@id/notes" />

            <TextView
                android:id="@+id/send"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/linear_background_for_addtocart"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:onClick="send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notes"
                app:layout_constraintWidth_percent="0.55" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>