<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/product_back"
    tools:context=".presentationn.screens.feature.home.productfragment.ProductsFragment">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        >

        <TextView
            android:id="@+id/product_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productsof"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/cates_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/product_of"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <ImageView
            android:id="@+id/change_span"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/filter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/filter"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="7dp"
            app:layout_constraintEnd_toStartOf="@id/change_span"
            />

    </android.support.constraint.ConstraintLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/allProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/head"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/filter_option"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:animateLayoutChanges="true"
        android:layout_margin="15dp"
        app:layout_constraintHeight_percent="0.2"
        android:background="@drawable/linear_background_cart_quntity"
        app:layout_constraintTop_toBottomOf="@+id/head"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/filter"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />


        <android.support.constraint.Guideline
            android:id="@+id/guid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.47"
            />


        <TextView
            android:id="@+id/pricefilter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.25"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/byprice"
            android:background="@drawable/linear_background_for_addtocart"
            app:layout_constraintEnd_toStartOf="@id/guid"
            app:layout_constraintBottom_toBottomOf="parent"
            />


        <TextView
            android:id="@+id/spilingfilter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.25"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/byspilling"
            android:background="@drawable/linear_background_for_addtocart"
            app:layout_constraintStart_toEndOf="@id/guid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/product_notfound"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/notfound"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/head"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

                />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>