<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/product_back"
    tools:context=".presentationn.screens.feature.home.mainfragment.MainFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_top_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/frontblur"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius_bottom_left="10dp"
                app:riv_corner_radius_bottom_right="10dp" />

            <com.github.mmin18.widget.RealtimeBlurView
                android:id="@+id/bluer"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintCircleRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:realtimeBlurRadius="20dp"
                app:realtimeOverlayColor="#8000"
                />


            <android.support.constraint.ConstraintLayout
                android:id="@+id/silderbackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UnusedAttribute" />

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    app:centered="true"
                    app:fillColor="@color/gray"
                    app:layout_constraintBottom_toBottomOf="@+id/pager"
                    app:pageColor="#fff"
                    app:snap="false" />

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/categoryRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/silderbackground"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/silderbackground" />

            <TextView
                android:id="@+id/TodayDeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/famous_product"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryRecycler" />

            <android.support.constraint.Group
                android:id="@+id/maingroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="TodayDeal,bluer" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvproducts"
                android:layout_width="0dp"
                android:layout_height="500dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/TodayDeal"
                app:layout_constraintWidth_percent="0.96"
                app:spanCount="2"
                tools:listitem="@layout/home_more_rate_item" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/no_items_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/scroll_top_id"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="@color/gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:text="@string/error"
            android:textColor="@color/red"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:shadowColor="@color/gray"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/frame_load_failed"
            android:textColor="@color/red"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:shadowColor="@color/grey_200"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/tab_to_retry"
            android:textColor="@color/green_300"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
